# advent-of-code

./: .gitignore  README.md
2015/: Cargo.toml  README.md  rustfmt.toml
2015/bench/: Cargo.toml
2015/bench/src/: main.rs
2015/src/: bench.rs  common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day06grid.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2015/src/day01/: Cargo.toml
2015/src/day01/src/: lib.rs
2015/src/day02/: Cargo.toml
2015/src/day02/src/: lib.rs
2015/src/day03/: Cargo.toml
2015/src/day03/src/: lib.rs
2015/src/day04/: Cargo.toml
2015/src/day04/src/: lib.rs
2015/src/day05/: Cargo.toml
2015/src/day06/: Cargo.toml
2015/src/day07/: Cargo.toml
2015/src/day08/: Cargo.toml
2015/src/day09/: Cargo.toml
2015/src/day10/: Cargo.toml
2015/src/day11/: Cargo.toml
2015/src/day11/src/: lib.rs
2015/src/day12/: Cargo.toml
2015/src/day13/: Cargo.toml
2015/src/day14/: Cargo.toml
2015/src/day15/: Cargo.toml
2015/src/day16/: Cargo.toml
2015/src/day17/: Cargo.toml
2015/src/day18/: Cargo.toml
2015/src/day19/: Cargo.toml
2015/src/day20/: Cargo.toml
2015/src/day21/: Cargo.toml
2015/src/day22/: Cargo.toml
2015/src/day23/: Cargo.toml
2015/src/day24/: Cargo.toml
2015/src/day25/: Cargo.toml
2015/src/util/: Cargo.toml
2015/src/util/src/: common.rs
2016/: README.md  rustfmt.toml
2016/src/: day01.rs  day06.rs  day17.rs  day21.rs  day23.rs  main.rs
2021/: Cargo.toml  README.md
2021/src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day18noeud.rs  day19.rs  day19coord.rs  day20.rs  day21.rs  day22.rs  day22cuboid.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
2022/: Cargo.toml  README.md  rustfmt.toml
2022/.cargo/: config
2022/src/: bench.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
2023/: Cargo.toml  README.md
2023/src/: bench.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  (+9 more)
2024/: Cargo.toml  README.md
2025/: Cargo.toml  README.md
2025/src/: bench.rs  day01.rs  day02.rs  day08.rs  day12.rs  main.rs
(+28 files in other folders)
