[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"
default-run = "adventofcode"

[[bin]]
name = "adventofcode"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[profile.release]
strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
# common.rs
colored = "2"
#bench.rs
took = "0.1"

# day04
md-5 = {version="0.10.5", features = ["asm"] }

# day07
regex = "1.7.0"