[package]
name = "adventofcode"
version = "0.1.0"
edition = "2024"
default-run = "adventofcode"

[[bin]]
name = "adventofcode"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[profile.release]
strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
# common.rs
colored = "3"
#bench.rs
took = "0.1"
regex = "1.12"
